# gridometer

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
config/: gridometer_config.json  logger.json
data/processed/: forecast_comparison.csv  gridometer.db
data/raw/: PUB_Demand.csv
data/raw/adequacy/: Adequacy Report.xml
data/raw/demand/: PUB_Demand_2026_v91.csv
scripts/: fetch_adequacy.py  fetch_demand.py  logger.py  runner.py
src/: analytic.hpp  csvparser.hpp  database.hpp  indicator.hpp  main.cpp  minimalcsvparser.hpp  pipeline.hpp
